--- a/online_botique/css/style.css
+++ b/online_botique/css/style.css
@@ -2,6 +2,7 @@ html{
     background-image: -webkit-linear-gradient(#db6a00, #f8a23f);
      background-image: -moz-linear-gradient(#db6a00, #f8a23f);
      background-image: -o-linear-gradient(#db6a00, #f8a23f);
+     background: #ccc;
 }
 body{
     font-family: 'Roboto', sans-serif;
